# rust-chess

./: Cargo.toml
examples/: fen_to_unicode.rs  show_moves.rs
src/: lib.rs  main.rs  move_parser.rs  play_move.rs  potential_moves.rs
src/an_parser/: mod.rs  move_types.rs
src/common/: coord.rs  errors.rs  fen_parser.rs  mod.rs  parse.rs  piece.rs
