[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
thiserror = "1.0.38"

[dev-dependencies]
indoc = "2.0.0"
pretty_assertions = "1.3.0"
