[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.38"
owo-colors = "3.5.0"
nom = "7.1.3"
nom-supreme = "0.8.0"

[dev-dependencies]
indoc = "2.0.0"
pretty_assertions = "1.3.0"
